--- a/01_teams_bot/doc/00_基础设计.md
+++ b/01_teams_bot/doc/00_基础设计.md
@@ -1,4 +1,3 @@
-
 # 在 Microsoft Teams 中添加 AI 机器人的实施方案（Python 开发，非 Azure 平台部署，集成 AI 服务）
 
 本方案将指导您如何使用 Python 和 Microsoft Bot Framework SDK 开发一个 AI 机器人，并将其部署在您自己的服务器上，同时集成 AI 服务。
@@ -12,7 +11,7 @@
     *   **Visual Studio Code:** 安装 Python 扩展和 Teams Toolkit 扩展。
     *   **Ngrok:** 用于本地测试和隧道连接。
     *   **Bot Framework Emulator:** 用于本地测试和调试。
-    *   **AI 服务访问凭证：** 例如 OpenAI API 密钥，或您选择的其他 AI 服务的 API 密钥和端点。
+    *   **AI 服务访问凭证：** 例如 Google Gemini API 密钥，或您选择的其他 AI 服务的 API 密钥和端点。
 
 ## 二、 实施步骤：
 
@@ -34,25 +33,28 @@
         botbuilder-integration-aiohttp # 或 botbuilder-integration-flask，取决于您选择的 web 框架
         python-dotenv # 用于管理环境变量
         requests # 用于调用 AI 服务 API
-        # 如果使用特定 AI 服务 SDK，也请在此处添加，例如：
-        # openai
+        google-generativeai # 集成 Gemini API
         ```
     *   安装依赖：`pip install -r requirements.txt`
 
 *   **机器人核心逻辑 (`app.py` 或类似文件)：**
     *   使用 `botbuilder-core` 库创建机器人应用。
     *   配置机器人的消息处理逻辑。当收到 Teams 消息时，机器人将调用 AI 服务。
-    *   **示例（伪代码，以调用 OpenAI 为例）：**
+    *   **示例（伪代码，以调用 Gemini 为例）：**
         ```python
         import os
-        import openai
+        import google.generativeai as genai
         from dotenv import load_dotenv
         from botbuilder.core import ActivityHandler, TurnContext, ConversationState, UserState
         from botbuilder.schema import ChannelAccount, Activity, MessageReaction
 
         load_dotenv() # 加载 .env 文件中的环境变量
 
-        openai.api_key = os.environ.get("OPENAI_API_KEY")
+        genai.configure(api_key=os.environ.get("GEMINI_API_KEY"))
+
+        # 初始化 Gemini 模型
+        model = genai.GenerativeModel('gemini-pro') # 或其他可用模型
+        chat = model.start_chat(history=[])
 
         class MyBot(ActivityHandler):
             async def on_message_activity(
@@ -65,17 +67,11 @@
 
             async def get_ai_response(self, message: str) -> str:
                 try:
-                    # 调用 OpenAI API
-                    response = openai.ChatCompletion.create(
-                        model="gpt-3.5-turbo", # 或其他模型
-                        messages=[
-                            {"role": "system", "content": "You are a helpful assistant."},
-                            {"role": "user", "content": message}
-                        ]
-                    )
-                    return response.choices[0].message.content.strip()
+                    # 调用 Gemini API
+                    response = chat.send_message(message)
+                    return response.text.strip()
                 except Exception as e:
-                    print(f"Error calling OpenAI API: {e}")
+                    print(f"Error calling Gemini API: {e}")
                     return "抱歉，我无法处理您的请求。"
 
         # ... (后续需要配置 Bot Framework 的适配器和运行服务器)
@@ -117,7 +113,7 @@
         ```dotenv
         MicrosoftAppId=YOUR_MICROSOFT_APP_ID
         MicrosoftAppPassword=YOUR_MICROSOFT_APP_PASSWORD
-        OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+        GEMINI_API_KEY=YOUR_GEMINI_API_KEY
         ```
 
 ### 3. 创建 Teams 应用清单 (`manifest.json`)：
@@ -209,7 +205,7 @@
 
 ### 7. 集成 AI 服务（已在步骤 2 中体现）：
 
-*   确保您的 Python 代码能够正确调用您选择的 AI 服务 API（如 OpenAI）。
+*   确保您的 Python 代码能够正确调用您选择的 AI 服务 API（如 Gemini）。
 *   在代码中处理 API 响应，并将其作为机器人的回复发送给用户。
 
 ## 四、 注意事项：
