--- a/01_teams_bot/doc/00_基础设计.md
+++ b/01_teams_bot/doc/00_基础设计.md
@@ -1,4 +1,4 @@
-# 在 Microsoft Teams 中添加 AI 机器人的实施方案（Python 开发，非 Azure 平台部署，集成 AI 服务）
+# 在 Microsoft Teams 中添加 AI 机器人的实施方案（Python 开发，非 Azure 平台部署集成 AI 服务）
 
 本方案将指导您如何使用 Python 和 Microsoft Bot Framework SDK 开发一个 AI 机器人，并将其部署在您自己的服务器上，同时集成 AI 服务。
 
