feat: Implement Teams AI Bot with Gemini integration
This commit introduces the core components for a Microsoft Teams AI bot using Python. It includes:
- Flask application setup (bin/app.py) for handling Teams messages via the Bot Framework SDK.
- A dedicated AI service module (bin/bot/ai_service.py) for interacting with the Gemini API.
- Necessary dependencies listed in requirements.txt.
- A basic Teams application manifest (manifest.json) for bot registration and configuration.
- An .env file for managing sensitive credentials.

The implementation follows the design outlined in the project's documentation, separating concerns for better maintainability and scalability.

--- a/01_teams_bot/doc/00_基础设计.md
+++ b/01_teams_bot/doc/00_基础设计.md
@@ -30,82 +30,106 @@
         ```txt
         botbuilder-core
         botbuilder-schema
-        botbuilder-integration-aiohttp # 或 botbuilder-integration-flask，取决于您选择的 web 框架
+        botbuilder-integration-flask # 使用 Flask 集成
         python-dotenv # 用于管理环境变量
-        requests # 用于调用 AI 服务 API
         google-generativeai # 集成 Gemini API
+        Flask # Flask Web 框架
         ```
     *   安装依赖：`pip install -r requirements.txt`
 
 *   **机器人核心逻辑 (`app.py` 或类似文件)：**
-    *   使用 `botbuilder-core` 库创建机器人应用。
-    *   配置机器人的消息处理逻辑。当收到 Teams 消息时，机器人将调用 AI 服务。
+    *   使用 `botbuilder-core` 和 `botbuilder-integration-flask` 库创建机器人应用。
+    *   配置机器人的消息处理逻辑。当收到 Teams 消息时，机器人将调用 AI 服务模块。
     *   **示例（伪代码，以调用 Gemini 为例）：**
         ```python
         import os
-        import google.generativeai as genai
         from dotenv import load_dotenv
-        from botbuilder.core import ActivityHandler, TurnContext, ConversationState, UserState
-        from botbuilder.schema import ChannelAccount, Activity, MessageReaction
+        from botbuilder.core import ConversationState, UserState, TurnContext
+        from botbuilder.core.teams import TeamsActivityHandler
+        from botbuilder.schema import ChannelAccount
+        from botbuilder.integration.flask import FlaskAdapter
+        from flask import Flask, request
+
+        # 导入 AI 服务模块
+        from bot.ai_service import GeminiAIService # 假设 AI 服务实现已移至 bot/ai_service.py
 
         load_dotenv() # 加载 .env 文件中的环境变量
-
-        genai.configure(api_key=os.environ.get("GEMINI_API_KEY"))
-
-        # 初始化 Gemini 模型
-        model = genai.GenerativeModel('gemini-pro') # 或其他可用模型
-        chat = model.start_chat(history=[])
-
-        class MyBot(ActivityHandler):
-            async def on_message_activity(
-                self, turn_context: TurnContext
-            ):
-                user_message = turn_context.activity.text
-                ai_response = await self.get_ai_response(user_message)
-
-                await turn_context.send_activity(f"AI 回复: {ai_response}")
-
-            async def get_ai_response(self, message: str) -> str:
-                try:
-                    # 调用 Gemini API
-                    response = chat.send_message(message)
-                    return response.text.strip()
-                except Exception as e:
-                    print(f"Error calling Gemini API: {e}")
-                    return "抱歉，我无法处理您的请求。"
-
-        # ... (后续需要配置 Bot Framework 的适配器和运行服务器)
-        ```
-
-*   **Web 服务器集成：**
-    *   使用 `botbuilder-integration-aiohttp` 或 `botbuilder-integration-flask` 来创建一个 Web 服务器来托管您的机器人。
-    *   配置机器人的消息端点路由（例如 `/api/messages`）。
-    *   **示例（使用 aiohttp）：**
-        ```python
-        # ... (在 app.py 或单独的 server.py 文件中)
-        from aiohttp import web
-        from botbuilder.core.teams import TeamsActivityHandler
-        from botbuilder.core.adapters import BotFrameworkAdapter, BotFrameworkAdapterSettings
-        from botbuilder.schema import Activity, ActivityTypes
-
-        # ... (MyBot 类定义如上)
 
         APP_ID = os.environ.get("MicrosoftAppId")
         APP_PASSWORD = os.environ.get("MicrosoftAppPassword")
 
-        bot_adapter = BotFrameworkAdapter(
-            BotFrameworkAdapterSettings(APP_ID, APP_PASSWORD)
-        )
-        bot = MyBot()
+        # 初始化 AI 服务
+        ai_service = GeminiAIService({
+            "api_key": os.environ.get("GEMINI_API_KEY")
+            # 可以添加其他配置，如模型名称
+        })
 
-        async def messages_endpoint(req: web.Request) -> web.Response:
-            return await bot_adapter.process(req, bot.on_turn)
+        class MyBot(TeamsActivityHandler):
+            def __init__(self, conversation_state: ConversationState, user_state: UserState):
+                super().__init__()
+                self.conversation_state = conversation_state
+                self.user_state = user_state
 
-        app = web.Application()
-        app.router.add_post("/api/messages", messages_endpoint)
+            async def on_message_activity(self, turn_context: TurnContext):
+                user_message = turn_context.activity.text
+                # 调用 AI 服务获取回复
+                ai_response = await ai_service.get_ai_response(user_message)
+
+                await turn_context.send_activity(f"AI 回复: {ai_response}")
+
+            async def on_members_added_activity(self, members_added: ChannelAccount, turn_context: TurnContext):
+                for member in members_added:
+                    if member.id != turn_context.activity.recipient.id:
+                        await turn_context.send_activity("欢迎！我是您的 AI 助手。")
+
+        # Flask 应用设置
+        app = Flask(__name__)
+
+        # 初始化状态管理器
+        conversation_state = ConversationState(None)
+        user_state = UserState(None)
+
+        # 创建机器人实例
+        bot = MyBot(conversation_state, user_state)
+
+        # 配置 Bot Framework Flask Adapter
+        bot_adapter = FlaskAdapter(bot, APP_ID, APP_PASSWORD)
+
+        # 定义消息处理路由
+        @app.route("/api/messages", methods=["POST"])
+        async def messages_endpoint():
+            return await bot_adapter.process(request, bot.on_turn)
 
         if __name__ == "__main__":
-            web.run_app(app, host="0.0.0.0", port=3978) # 端口可自定义
+            # 运行 Flask 开发服务器
+            # 在生产环境中，应使用 Gunicorn 或 uWSGI
+            app.run(host="0.0.0.0", port=3978) # 端口可自定义
+        ```
+
+*   **AI 服务模块 (`bot/ai_service.py`)：**
+    *   创建一个 `bot/ai_service.py` 文件，包含 AI 服务的具体实现。
+    *   **示例 `bot/ai_service.py`：**
+        ```python
+        import os
+        import google.generativeai as genai
+        from botbuilder.core import TurnContext
+
+        class GeminiAIService:
+            def __init__(self, config: dict):
+                self.api_key = config.get("api_key")
+                if not self.api_key:
+                    raise ValueError("Gemini API key is missing.")
+                genai.configure(api_key=self.api_key)
+                self.model = genai.GenerativeModel('gemini-pro') # 或其他可用模型
+                self.chat = self.model.start_chat(history=[])
+
+            async def get_ai_response(self, message: str) -> str:
+                try:
+                    response = self.chat.send_message(message)
+                    return response.text.strip()
+                except Exception as e:
+                    print(f"Error calling Gemini API: {e}")
+                    return "抱歉，我无法处理您的请求。"
         ```
 
 *   **环境变量配置：**
@@ -170,7 +194,7 @@
 
 ### 4. 本地测试与调试：
 
-*   **运行机器人：** 在激活的虚拟环境中运行您的机器人应用：`python app.py` (或您主文件的名称)。
+*   **运行机器人：** 在激活的虚拟环境中运行您的机器人应用：`python app.py`。
 *   **启动 Ngrok：** 在另一个终端窗口中，运行 Ngrok 来暴露您的机器人端口（例如，如果机器人运行在 3978 端口）：`ngrok http 3978`。
 *   **获取 Ngrok URL：** Ngrok 会提供一个 `https://....ngrok.io` 的 URL。
 *   **更新 Manifest：** 将 `manifest.json` 中的 `validDomains` 和 `messageEndpoint` 更新为 Ngrok 提供的 URL。
@@ -214,3 +238,14 @@
 *   **HTTPS：** Teams 要求所有机器人通信都通过 HTTPS 进行。务必在服务器上配置好 SSL 证书。
 *   **端口和域名：** 确保您的机器人服务监听的端口在服务器上是可访问的，并且您的域名解析正确，Nginx/Apache 配置也正确指向您的机器人应用。
 *   **错误处理：** 在机器人代码中加入健壮的错误处理机制，特别是对于外部 AI 服务的调用。
+
+--- 
+
+**总结更改：**
+
+*   **依赖：** 添加 `botbuilder-integration-flask`。
+*   **代码结构：** 使用 Flask 的路由 (`@app.route`) 来处理 `/api/messages` 端点。
+*   **适配器：** 强烈建议使用 `botbuilder-integration-flask` 提供的 `FlaskAdapter` 来简化集成，而不是直接使用 `BotFrameworkAdapter`。
+*   **运行命令：** 部署时使用 Gunicorn 运行 Flask 应用。
+
+这份文档详细说明了每个功能点的实现方法和所需的技术细节。在实际开发中，请根据您的具体需求和选择的框架进行调整。
