--- a/01_teams_bot/doc/函数设计.md
+++ b/01_teams_bot/doc/函数设计.md
@@ -10,7 +10,8 @@
 ├── app.py                   # Flask 应用主文件，集成 Bot Framework Adapter
 ├── bot/
 │   ├── __init__.py
-│   └── ai_bot.py            # 机器人类定义，处理消息和调用 AI 服务
+│   └── ai_bot.py            # 机器人类定义，处理消息并调用 AI 服务模块
+│   └── ai_service.py        # AI 服务调用模块
 ├── requirements.txt         # 项目依赖列表
 ├── manifest.json            # Teams 应用清单文件
 └── ... (其他可能的模块，如配置、工具等)
@@ -45,7 +46,7 @@
     *   实现机器人的核心对话逻辑。
     *   继承 `ActivityHandler` 或使用 `FlaskAdapter` 集成。
     *   处理接收到的消息。
-    *   调用 AI 服务（Gemini API）获取回复。
+    *   **调用 AI 服务模块 (`ai_service.py`) 获取回复。**
     *   将 AI 回复发送回 Teams。
 
 *   **关键类与函数：**
@@ -55,20 +56,30 @@
             *   **功能：** 当收到用户消息活动时被调用。
             *   **实现：**
                 1.  获取用户消息文本：`user_message = turn_context.activity.text`。
-                2.  调用 `get_ai_response(user_message)` 获取 AI 回复。
+                2.  **调用 AI 服务模块获取回复：`ai_response = await ai_service.get_ai_response(user_message)`**。
                 3.  发送 AI 回复：`await turn_context.send_activity(f"AI 回复: {ai_response}")`。
-        *   `async def get_ai_response(self, message: str) -> str`:
-            *   **功能：** 调用 AI 服务（Gemini API）并返回结果。
-            *   **实现：**
-                1.  配置 Gemini API (如果未在 `app.py` 中全局配置)。
-                2.  初始化 Gemini 模型和对话。
-                3.  使用 `chat.send_message(message)` 发送消息。
-                4.  处理 API 响应，提取文本。
-                5.  包含错误处理 (`try-except`)。
-                6.  返回 AI 生成的文本或错误信息。
         *   `async def on_members_added_activity(self, members_added: ChannelAccount, turn_context: TurnContext)`: (可选) 当新成员加入对话时触发，可以发送欢迎消息。
         *   `async def on_message_reaction_activity(self, turn_context: TurnContext)`: (可选) 处理消息的反应。
-    *   **依赖库：** `botbuilder-core`, `botbuilder-schema`, `google-generativeai`, `os` (Python 标准库)
+    *   **依赖库：** `botbuilder-core`, `botbuilder-schema`, `os` (Python 标准库)
+
+#### 2.3. `bot/ai_service.py` (AI 服务调用模块)
+
+*   **功能：**
+    *   封装调用 Gemini API 的逻辑。
+    *   提供一个函数来获取 AI 的回复。
+
+*   **关键类与函数：**
+    *   `async def get_ai_response(self, message: str) -> str`:
+        *   **功能：** 调用 AI 服务（Gemini API）并返回结果。
+        *   **实现：**
+            1.  从环境变量加载 Gemini API 密钥。
+            2.  配置 Gemini API。
+            3.  初始化 Gemini 模型和对话。
+            4.  使用 `chat.send_message(message)` 发送消息。
+            5.  处理 API 响应，提取文本。
+            6.  包含错误处理 (`try-except`)。
+            7.  返回 AI 生成的文本或错误信息。
+    *   **依赖库：** `google-generativeai`, `os` (Python 标准库)
 
 ### 3. 依赖管理
 
