--- a/01_teams_bot/doc/详细设计.md
+++ b/01_teams_bot/doc/详细设计.md
@@ -1,4 +1,3 @@
-
 ## Python Teams AI 机器人详细开发文档
 
 ### 1. 项目概述
@@ -15,23 +14,53 @@
     *   重写 `on_message_activity` 方法来处理用户发送的文本消息。此方法会在收到消息活动时被调用。
     *   在 `on_message_activity` 方法中，从 `turn_context.activity.text` 获取用户发送的原始消息内容。
 
-#### 2.2. AI 服务集成（以 Google Gemini 为例）
+#### 2.2. AI 服务集成（通用接口设计）
 
-*   **功能描述：** 将接收到的用户消息发送给 AI 服务（如 Google Gemini API），获取 AI 生成的回复。
+*   **功能描述：** 设计一套通用的 AI 服务接口，使得机器人能够灵活地集成不同的 AI 服务（如 Google Gemini, OpenAI GPT 等），并能方便地切换或扩展。
 *   **实现方法：**
-    *   **依赖安装：** 确保 `requirements.txt` 中包含 `google-generativeai` 和 `python-dotenv`。
-    *   **API 密钥管理：**
-        *   创建一个 `.env` 文件，并在其中存储 `GEMINI_API_KEY`。
-        *   使用 `python-dotenv` 库加载环境变量：`from dotenv import load_dotenv; load_dotenv()`。
-        *   配置 Gemini API：`import google.generativeai as genai; genai.configure(api_key=os.environ.get("GEMINI_API_KEY"))`。
-    *   **模型初始化：**
-        *   选择并初始化 Gemini 模型：`model = genai.GenerativeModel('gemini-pro')`。
-        *   启动一个对话会话（如果需要保持对话历史）：`chat = model.start_chat(history=[])`。
-    *   **调用 AI 服务：**
-        *   在机器人的消息处理逻辑中（例如一个单独的 `get_ai_response` 方法），调用 Gemini API。
-        *   使用 `chat.send_message(user_message)` 发送用户消息给模型。
-        *   从返回的响应对象中提取 AI 生成的文本：`response.text.strip()`。
-    *   **错误处理：** 为调用 AI 服务 API 的过程添加 `try-except` 块，捕获潜在的网络错误、API 错误等，并返回友好的错误提示给用户。
+
+    1.  **定义抽象 AI 服务接口 (`AIServiceInterface`)：**
+        *   创建一个抽象基类，定义所有 AI 服务必须实现的标准方法。
+        *   **`__init__(self, config: dict)`**:
+            *   **目的：** 初始化 AI 服务客户端。
+            *   **参数：** `config` (dict) - 包含 AI 服务所需配置的字典（如 `api_key`, `model_name`, `endpoint_url` 等）。
+            *   **行为：** 存储配置，验证必需项，调用 `_initialize_service()`。
+            *   **异常：** 配置缺失时抛出 `ValueError`。
+        *   **`_initialize_service(self)`**:
+            *   **目的：** 执行特定于 AI 服务的初始化操作。
+            *   **类型：** 受保护的抽象方法，由具体实现类提供。
+        *   **`get_ai_response(self, message: str, conversation_history: list = None) -> str`**:
+            *   **目的：** 向 AI 服务发送消息并获取回复。
+            *   **参数：** `message` (str) - 用户消息；`conversation_history` (list, 可选) - 用于多轮对话的上下文。
+            *   **返回值：** (str) AI 生成的文本回复。
+            *   **异常：** 调用服务失败时返回通用错误消息。
+        *   **`load_config_from_env(prefix: str) -> dict`**:
+            *   **目的：** 提供静态方法，从环境变量加载特定服务的配置（如 `PREFIX_API_KEY`, `PREFIX_MODEL_NAME`）。
+            *   **参数：** `prefix` (str) - 环境变量前缀。
+            *   **返回值：** (dict) 包含加载配置的字典。
+
+    2.  **实现具体的 AI 服务类：**
+        *   为每种 AI 服务（如 Google Gemini, OpenAI GPT）创建一个继承自 `AIServiceInterface` 的具体实现类（例如 `GeminiAIService`, `OpenAIAIService`）。
+        *   在每个实现类中，重写 `_initialize_service()` 和 `get_ai_response()` 方法，以适 ancak 该服务的 API 调用方式和配置需求。
+        *   （可选）提供静态方法（如 `GeminiAIService.get_default_config()`）来简化配置加载。
+
+    3.  **创建 AI 服务工厂 (`AIServiceFactory`)：**
+        *   **`SUPPORTED_SERVICES` (dict)**: 映射服务类型字符串（如 `"gemini"`, `"openai"`）到对应的实现类。
+        *   **`get_ai_service(service_type: str, config: dict = None) -> AIServiceInterface`**:
+            *   **目的：** 根据服务类型和配置，返回正确的 AI 服务实例。
+            *   **行为：** 使用工厂模式查找并实例化服务类。如果未提供 `config`，则尝试加载默认配置。
+            *   **异常：** 服务类型不支持或配置缺失时抛出 `ValueError`。
+
+    4.  **在机器人核心逻辑中集成：**
+        *   **配置提供商：** 使用环境变量（如 `AI_SERVICE_PROVIDER`）指定要使用的 AI 服务类型。
+        *   **实例化服务：** 在机器人类 (`MyBot`) 的初始化中，根据 `AI_SERVICE_PROVIDER` 使用 `AIServiceFactory` 获取 AI 服务实例。
+        *   **调用服务：** 在处理消息的方法 (`on_message_activity`) 中，调用 AI 服务实例的 `get_ai_response()` 方法来获取 AI 回复。
+        *   **对话历史管理：** （可选）实现对话历史的存储和传递，将其作为参数传递给 `get_ai_response()`。
+
+    5.  **环境变量配置更新：**
+        *   在 `.env` 文件中添加 `AI_SERVICE_PROVIDER` 变量，并为不同 AI 服务配置相应的密钥和模型名称（如 `GEMINI_API_KEY`, `OPENAI_API_KEY`）。
+
+*   **依赖：** 确保 `requirements.txt` 包含所有需要的 AI SDK（如 `google-generativeai`, `openai`）以及 `python-dotenv`。
 
 #### 2.3. AI 回复发送
 
@@ -49,69 +78,16 @@
         *   初始化 `BotFrameworkAdapter` 和 `BotFrameworkAdapterSettings`，传入从 `.env` 文件加载的 `MicrosoftAppId` 和 `MicrosoftAppPassword`。
         *   `bot_adapter = BotFrameworkAdapter(BotFrameworkAdapterSettings(APP_ID, APP_PASSWORD))`
     *   **创建 Flask 应用：**
-        *   导入 Flask 并创建一个应用实例：
-            ```python
-            from flask import Flask, request, Response
-            from botbuilder.core.adapters import BotFrameworkAdapter, BotFrameworkAdapterSettings
-            from botbuilder.core.teams import TeamsActivityHandler
-            from botbuilder.schema import Activity, ActivityTypes
-            import os
-            from dotenv import load_dotenv
+        *   导入 Flask 并创建一个应用实例
 
-            load_dotenv()
-
-            APP_ID = os.environ.get("MicrosoftAppId")
-            APP_PASSWORD = os.environ.get("MicrosoftAppPassword")
-
-            bot_adapter = BotFrameworkAdapter(
-                BotFrameworkAdapterSettings(APP_ID, APP_PASSWORD)
-            )
-            # MyBot 类定义需要在此之前或在此处导入/定义
-            # from my_bot_logic import MyBot # 假设 MyBot 类在 my_bot_logic.py 文件中
-            # bot = MyBot()
-
-            app = Flask(__name__)
-            ```
     *   **配置消息端点：**
         *   定义一个处理 POST 请求的路由函数（例如 `messages`），该函数接收 Flask 的 `request` 对象。
         *   在该函数内部，调用 `bot_adapter.process(req, bot.on_turn)` 来处理传入的消息活动。
         *   将此函数注册为 Flask 应用的一个路由，通常是 `/api/messages`。
-            ```python
-            @app.route("/api/messages", methods=["POST"])
-            async def messages():
-                # 推荐使用 botbuilder-integration-flask 提供的 FlaskAdapter
-                # from botbuilder.integration.flask import FlaskAdapter
-                # flask_adapter = FlaskAdapter(bot, APP_ID, APP_PASSWORD)
-                # return flask_adapter.process()
-
-                # 如果直接使用 BotFrameworkAdapter，需要确保其兼容 Flask 的 request 对象
-                # 这是一个简化的示例，实际可能需要更复杂的处理
-                response = await bot_adapter.process(request, bot.on_turn)
-                return Response(response.body, response.status_code, response.headers)
-
-            ```
         *   **重要提示：** `botbuilder-core` 的 `BotFrameworkAdapter.process` 方法设计时可能更侧重于 `aiohttp` 或其他异步框架。使用 Flask 时，推荐使用 `botbuilder-integration-flask` 库，它提供了专门为 Flask 设计的适配器，可以更顺畅地集成。如果直接使用 `BotFrameworkAdapter`，可能需要一些额外的适配工作来处理 Flask 的 `request` 对象。
 
     *   **运行服务器：**
         *   在 `if __name__ == "__main__":` 块中运行 Flask 应用。
-            ```python
-            if __name__ == "__main__":
-                # 如果使用 Flask 内置服务器进行开发
-                # app.run(port=3978) # 端口可自定义
-
-                # 对于生产部署，推荐使用 Gunicorn 或 uWSGI
-                # 例如，使用 Gunicorn:
-                # gunicorn --bind 0.0.0.0:3978 --workers 1 app:app
-                # 注意：如果使用 Gunicorn，则不需要此处的 app.run()
-                # 并且需要确保 MyBot 类被正确导入和实例化
-                # 假设 MyBot 类在 app.py 文件中定义，则 app:app 是正确的
-                # 如果 MyBot 在其他文件，例如 my_bot_logic.py，则需要调整
-                # 例如：
-                # from my_bot_logic import MyBot
-                # bot = MyBot()
-                # app.run(port=3978) # 开发时使用
-                pass # 如果使用 Gunicorn 运行，则此行不需要
-            ```
 
 #### 2.5. 环境变量管理
 
@@ -213,7 +189,7 @@
     *   在 Teams 中，导航到“应用” > “管理你的应用” > “上传自定义应用”。
     *   选择打包好的 `.zip` 文件进行上传和安装。
 
----
+--- 
 
 **总结更改：**
 
