docs: Update function design document for src code

--- a/01_teams_bot/doc/函数设计.md
+++ b/01_teams_bot/doc/函数设计.md
@@ -23,77 +23,88 @@
 
 *   **功能：**
     *   初始化 Flask 应用。
-    *   加载环境变量。
-    *   配置 Bot Framework Adapter (推荐使用 `FlaskAdapter`)。
-    *   实例化机器人类 (`ai_bot.py` 中的 `MyBot`)。
-    *   定义 Flask 路由，处理来自 Teams 的消息 (`/api/messages`)。
-    *   启动 Flask 开发服务器（用于本地测试）或配置与 WSGI 服务器（如 Gunicorn）的集成。
+    *   加载环境变量 (`.env` 文件)。
+    *   配置 Bot Framework Adapter Settings (`MicrosoftAppId`, `MicrosoftAppPassword`)。
+    *   实例化机器人类 (`MyBot`)。
+    *   定义 Flask 路由 (`/api/messages`) 来处理来自 Teams 的消息。
+    *   使用 `asyncio.run` 来处理异步消息处理。
+    *   启动 Flask 开发服务器（默认端口 3978）。
 
 *   **关键函数/类：**
     *   `Flask(__name__)`: Flask 应用实例。
-    *   `load_dotenv()`: 加载 `.env` 文件。
-    *   `os.environ.get()`: 获取环境变量（`MicrosoftAppId`, `MicrosoftAppPassword`, `GEMINI_API_KEY`）。
-    *   `FlaskAdapter(bot, APP_ID, APP_PASSWORD)`: (推荐) Bot Framework 的 Flask 适配器，用于处理请求和响应。
-    *   `@app.route("/api/messages", methods=["POST"])`: 定义消息处理的路由。
-    *   `messages()`: 处理 POST 请求的异步函数，调用适配器处理消息。
-    *   `app.run()`: (开发时) 启动 Flask 内置服务器。
-    *   (部署时) Gunicorn 会直接加载 `app` 实例。
-    *   **依赖库：** `Flask`, `botbuilder-core`, `botbuilder-integration-flask`, `python-dotenv`, `os` (Python 标准库)
+    *   `load_dotenv()`: 加载 `.env` 文件中的环境变量。
+    *   `os.environ.get()`: 获取 `MicrosoftAppId`, `MicrosoftAppPassword`。
+    *   `ConversationState(None)`: 初始化对话状态管理器（当前为占位符）。
+    *   `UserState(None)`: 初始化用户状态管理器（当前为占位符）。
+    *   `MyBot(...)`: 实例化机器人类。
+    *   `BotFrameworkAdapterSettings(APP_ID, APP_PASSWORD)`: 配置 Bot Framework Adapter 的设置。
+    *   `BotFrameworkAdapter(settings)`: 创建 Bot Framework Adapter 实例。
+    *   `@app.route("/api/messages", methods=["POST"])`: 定义消息处理的 POST 路由。
+    *   `messages_endpoint()`: 处理入站消息的函数，调用 `bot_adapter.process`。
+    *   `app.run(host="0.0.0.0", port=3978)`: 启动 Flask 开发服务器。
+    *   **依赖库：** `Flask`, `botbuilder-core`, `python-dotenv`, `os` (Python 标准库), `asyncio`
 
 #### 2.2. `bot/ai_bot.py` (机器人核心逻辑)
 
 *   **功能：**
-    *   实现机器人的核心对话逻辑。
-    *   继承 `ActivityHandler` 或使用 `FlaskAdapter` 集成。
-    *   处理接收到的消息。
-    *   **调用 AI 服务模块 (`ai_service.py`) 获取回复。**
-    *   将 AI 回复发送回 Teams。
+    *   实现机器人的核心对话逻辑，继承自 `TeamsActivityHandler`。
+    *   处理用户消息，调用 AI 服务获取回复，并将回复发送回 Teams。
+    *   处理新成员加入时的欢迎消息。
 
 *   **关键类与函数：**
-    *   `class MyBot(ActivityHandler)`: 机器人的主类。
-        *   `__init__(self, conversation_state: ConversationState, user_state: UserState)`: (可选) 初始化对话状态和用户状态管理器。
+    *   `class MyBot(TeamsActivityHandler)`: 机器人的主类。
+        *   `__init__(self, conversation_state: ConversationState, user_state: UserState)`: 初始化对话和用户状态管理器。
         *   `async def on_message_activity(self, turn_context: TurnContext)`:
-            *   **功能：** 当收到用户消息活动时被调用。
+            *   **功能：** 处理用户发送的消息。
             *   **实现：**
                 1.  获取用户消息文本：`user_message = turn_context.activity.text`。
-                2.  **调用 AI 服务模块获取回复：`ai_response = await ai_service.get_ai_response(user_message)`**。
+                2.  **调用 AI 服务获取回复：`ai_response = await ai_service.get_ai_response(user_message)`**。
                 3.  发送 AI 回复：`await turn_context.send_activity(f"AI 回复: {ai_response}")`。
-        *   `async def on_members_added_activity(self, members_added: ChannelAccount, turn_context: TurnContext)`: (可选) 当新成员加入对话时触发，可以发送欢迎消息。
-        *   `async def on_message_reaction_activity(self, turn_context: TurnContext)`: (可选) 处理消息的反应。
+        *   `async def on_members_added_activity(self, members_added: ChannelAccount, turn_context: TurnContext)`:
+            *   **功能：** 当新成员加入对话时触发。
+            *   **实现：** 发送欢迎消息：“欢迎！我是您的 AI 助手。”
+    *   **AI 服务集成：**
+        *   导入 AI 服务：`from .ai_service import GeminiAIService` (相对导入)。
+        *   初始化 AI 服务：`ai_service = GeminiAIService(...)`，需要 `GEMINI_API_KEY`。
+        *   **AI 密钥检查：** 如果 `GEMINI_API_KEY` 未设置，则抛出 `ValueError`。
     *   **依赖库：** `botbuilder-core`, `botbuilder-schema`, `os` (Python 标准库)
 
 #### 2.3. `bot/ai_service.py` (AI 服务调用模块)
 
 *   **功能：**
     *   封装调用 Gemini API 的逻辑。
-    *   提供一个函数来获取 AI 的回复。
+    *   提供 `get_ai_response` 方法来获取 AI 的回复。
 
 *   **关键类与函数：**
-    *   `async def get_ai_response(self, message: str) -> str`:
-        *   **功能：** 调用 AI 服务（Gemini API）并返回结果。
-        *   **实现：**
-            1.  从环境变量加载 Gemini API 密钥。
-            2.  配置 Gemini API。
-            3.  初始化 Gemini 模型和对话。
-            4.  使用 `chat.send_message(message)` 发送消息。
-            5.  处理 API 响应，提取文本。
-            6.  包含错误处理 (`try-except`)。
-            7.  返回 AI 生成的文本或错误信息。
+    *   `class GeminiAIService`:
+        *   `__init__(self, config: dict)`:
+            *   **功能：** 初始化服务，配置 Gemini API。
+            *   **实现：**
+                1.  获取并验证 `api_key`。
+                2.  调用 `genai.configure(api_key=self.api_key)`。
+                3.  初始化生成模型：`self.model = genai.GenerativeModel('gemini-pro')`。
+                4.  启动聊天会话：`self.chat = self.model.start_chat(history=[])`。
+        *   `async def get_ai_response(self, message: str) -> str`:
+            *   **功能：** 向 Gemini API 发送消息并返回回复。
+            *   **实现：**
+                1.  使用 `self.chat.send_message(message)` 发送消息。
+                2.  获取响应文本并去除首尾空格：`response.text.strip()`。
+                3.  **错误处理：** 使用 `try-except` 捕获异常，打印错误信息，并返回用户友好的错误消息：“抱歉，我无法处理您的请求。”
     *   **依赖库：** `google-generativeai`, `os` (Python 标准库)
 
 ### 3. 依赖管理
 
-*   **`requirements.txt` 文件：**
+*   **`requirements.txt` 文件应包含：**
     *   `botbuilder-core`
     *   `botbuilder-schema`
-    *   `botbuilder-integration-flask` (用于 Flask 集成)
-    *   `python-dotenv` (用于加载 `.env` 文件)
-    *   `google-generativeai` (用于 Gemini API)
-    *   `Flask` (Flask Web 框架)
-    *   `gunicorn` (生产环境 WSGI 服务器)
+    *   `botbuilder-integration-flask`
+    *   `python-dotenv`
+    *   `google-generativeai`
+    *   `Flask`
+    *   `gunicorn` (生产环境部署时)
 
 ### 4. 环境变量 (`.env` 文件)
 
-*   `MicrosoftAppId`: 您的 Microsoft Entra ID 应用 ID。
-*   `MicrosoftAppPassword`: 您的 Microsoft Entra ID 应用密码。
-*   `GEMINI_API_KEY`: 您的 Google Gemini API 密钥。
+*   `MicrosoftAppId`: Microsoft Entra ID 应用 ID。
+*   `MicrosoftAppPassword`: Microsoft Entra ID 应用密码。
+*   `GEMINI_API_KEY`: Google Gemini API 密钥。
