docs: Update function design document

--- a/01_teams_bot/doc/函数设计.md
+++ b/01_teams_bot/doc/函数设计.md
@@ -97,11 +97,12 @@
 *   **`requirements.txt` 文件应包含：**
     *   `botbuilder-core`
     *   `botbuilder-schema`
-    *   `botbuilder-integration-flask`
     *   `python-dotenv`
     *   `google-generativeai`
     *   `Flask`
-    *   `gunicorn` (生产环境部署时)
+    *   `gunicorn`
+    *   `aiohttp`
+    *   `flask[async]`
 
 ### 4. 环境变量 (`.env` 文件)
 
